# sqlx-no-index-use-reproduction

./: Cargo.toml  README.md  db_setup.sh
src/: main.rs
