[package]
name = "sqlx-no-index-use-reproduction"
version = "0.1.0"
authors = ["timhabermaas <tim.habermaas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = "0.2"
